--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml"
+  xmlns:o="urn:schemas-microsoft-com:office:office">
 
 <head>
   <meta charset="utf-8"> <!-- utf-8 works for most cases -->
@@ -30,7 +30,7 @@ xmlns:o="urn:schemas-microsoft-com:office:office">
             <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr>
                 <td class="logo" style="text-align: left;">
-                  <><a href="#">Shop</a></h1>
+                  <h1><a href="#">Shop</a></h1>
                 </td>
               </tr>
             </table>
@@ -69,7 +69,7 @@ xmlns:o="urn:schemas-microsoft-com:office:office">
                 </div>
               </td>
               <td valign="middle" width="20%" style="text-align:left; padding: 0 12.5em;">
-                span class="price" style="color: #000; font-size: 20px;">$120</span>
+                <span class="price" style="color: #000; font-size: 20px;">$120</span>
               </td>
             </tr>
             <tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
