--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
           </td>
         </tr><!-- end tr -->
         <tr>
-          <td valign="middle" class=hero bg_white" style="padding: 2em 0 2em 0;">
+          <td valign="middle" class=bg_white style="padding: 2em 0 2em 0;">
             <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr>
                 <td style="padding: 0 2.5em; text-align: left;">
                   <div class="text">
-                    <h2>Casio your shopping cart misses you</h2>
+                    <h2>Ronald your shopping cart misses you</h2>
                     <h3>Amazing deals, updates, interesting news right in your inbox</h3>
                   </div>
                 </td>
@@ -57,8 +57,8 @@
               <th width="20%" style="text-align:right; padding: 0 2.5em; color: #000; padding-bottom: 20px">Price</th>
             </tr>
             <tr style="border-bottom: 1px solid rgba(0,0,0,.05);">
-              <td valign="middle" width="80%" style="text-align:right; padding: 0 2.5em;">
-                <div class=product-entry">
+              <td valign="middle" width="80%" style="text-align:left; padding: 0 2.5em;">
+                <div class="product-entry">
                   <img src="images/prod-1.jpg" alt=""
                     style="width: 100px; max-width: 600px; height: auto; margin-bottom: 20px; display: block;">
                   <div class="text">
@@ -68,7 +68,7 @@
                   </div>
                 </div>
               </td>
-              <td valign="middle" width="20%" style="text-align:left; padding: 0 12.5em;">
+              <td valign="middle" width="20%" style="text-align:left; padding: 0 2.5em;">
                 <span class="price" style="color: #000; font-size: 20px;">$120</span>
               </td>
             </tr>
@@ -89,7 +89,7 @@
               </td>
             </tr>
             <tr>
-              <td valign="middle" style="text-align:left; padding: 1em 2.5em;">
+              <td valign="middle" style="text-align:center; padding: 1em 2.5em;">
                 <p><a href="#" class="btn btn-primary">Continur your order</a></p>
               </td>
             </tr>
