--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </td>
         </tr><!-- end tr -->
         <tr>
-          <td valign="middle" class=bg_white style="padding: 2em 0 2em 0;">
+          <td valign="middle" class="bg_white" style="padding: 2em 0 2em 0;">
             <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%">
               <tr>
                 <td style="padding: 0 2.5em; text-align: left;">
@@ -89,7 +89,7 @@
               </td>
             </tr>
             <tr>
-              <td valign="middle" style="text-align:center; padding: 1em 2.5em;">
+              <td valign="middle" style="text-align: center; padding: 1em 2.5em;">
                 <p><a href="#" class="btn btn-primary">Continur your order</a></p>
               </td>
             </tr>
