Add  all buttons into index.html
Add  all buttons into index.html, distributed classes to buttons, add style.css

--- a/lw2/task2/index.html
+++ b/lw2/task2/index.html
@@ -6,9 +6,65 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+  <div class="container-buttons">
+    <!-- XLarge Default buttons -->
+    <button class="button button-large">XLarge Default</button>
+    <button class="button button-large button-filled">XLarge Default</button>
+    <button class="button button-large">XLarge Default</button>
+    <button class="button button-large button-filled">XLarge Default</button>
+    <button class="button button-large button-rounded">XLarge Default</button>
+    <button class="button button-large button-filled button-rounded">XLarge Default</button>
+
+    <br>
+    <!-- Large Primary buttons -->
+    <button class="button button-primary">Large Primary</button>
+    <button class="button button-primary button-filled">Large Primary</button>
+    <button class="button button-primary">Large Primary</button>
+    <button class="button button-primary button-filled">Large Primary</button>
+    <button class="button button-primary button-rounded">Large Primary</button>
+    <button class="button button-primary button-filled button-rounded">Large Primary</button>
+
+    <br>
+    <!-- Large Success buttons -->
+    <button class="button button-success">Large Success</button>
+    <button class="button button-success button-filled">Large Success</button>
+    <button class="button button-success">Large Success</button>
+    <button class="button button-success button-filled">Large Success</button>
+    <button class="button button-success button-rounded">Large Success</button>
+    <button class="button button-success button-filled button-rounded">Large Success</button>
+
+    <br>
+    <!-- Medium Info buttons -->
+    <button class="button button-medium">Medium Info</button>
+    <button class="button button-medium button-filled">Medium Info</button>
+    <button class="button button-medium">Medium Info</button>
+    <button class="button button-medium button-filled">Medium Info</button>
+    <button class="button button-medium button-rounded">Medium Info</button>
+    <button class="button button-medium button-filled button-rounded">Medium Info</button>
+
+    <br>
+    <!-- Small Warning buttons -->
+    <button class="button button-warning">Small Warning</button>
+    <button class="button button-warning button-filled">Small Warning</button>
+    <button class="button button-warning">Small Warning</button>
+    <button class="button button-warning button-filled">Small Warning</button>
+    <button class="button button-warning button-rounded">Small Warning</button>
+    <button class="button button-warning button-filled button-rounded">Small Warning</button>
+
+    <br>
+    <!-- X-Small buttons -->
+    <button class="button button-red">X-Small</button>
+    <button class="button button-red button-filled">X-Small</button>
+    <button class="button button-red">X-Small</button>
+    <button class="button button-red button-filled">X-Small</button>
+    <button class="button button-red button-rounded">X-Small</button>
+    <button class="button button-red button-filled button-rounded">X-Small</button>
+  </div>
 
 </body>
 
