Add styles into task2/style.css

--- a/lw2/task2/index.html
+++ b/lw2/task2/index.html
@@ -13,8 +13,8 @@
 
   <div class="container-buttons">
     <!-- XLarge Default buttons -->
-    <button class="button button-large">XLarge Default</button>
-    <button class="button button-large button-filled">XLarge Default</button>
+    <button class="button-large">XLarge Default</button>
+    <button class="button-large button-filled">XLarge Default</button>
     <button class="button button-large">XLarge Default</button>
     <button class="button button-large button-filled">XLarge Default</button>
     <button class="button button-large button-rounded">XLarge Default</button>
@@ -22,8 +22,8 @@
 
     <br>
     <!-- Large Primary buttons -->
-    <button class="button button-primary">Large Primary</button>
-    <button class="button button-primary button-filled">Large Primary</button>
+    <button class="button-primary">Large Primary</button>
+    <button class="button-primary button-filled">Large Primary</button>
     <button class="button button-primary">Large Primary</button>
     <button class="button button-primary button-filled">Large Primary</button>
     <button class="button button-primary button-rounded">Large Primary</button>
@@ -31,8 +31,8 @@
 
     <br>
     <!-- Large Success buttons -->
-    <button class="button button-success">Large Success</button>
-    <button class="button button-success button-filled">Large Success</button>
+    <button class="button-success">Large Success</button>
+    <button class="button-success button-filled">Large Success</button>
     <button class="button button-success">Large Success</button>
     <button class="button button-success button-filled">Large Success</button>
     <button class="button button-success button-rounded">Large Success</button>
@@ -40,8 +40,8 @@
 
     <br>
     <!-- Medium Info buttons -->
-    <button class="button button-medium">Medium Info</button>
-    <button class="button button-medium button-filled">Medium Info</button>
+    <button class="button-medium">Medium Info</button>
+    <button class="button-medium button-filled">Medium Info</button>
     <button class="button button-medium">Medium Info</button>
     <button class="button button-medium button-filled">Medium Info</button>
     <button class="button button-medium button-rounded">Medium Info</button>
@@ -49,8 +49,8 @@
 
     <br>
     <!-- Small Warning buttons -->
-    <button class="button button-warning">Small Warning</button>
-    <button class="button button-warning button-filled">Small Warning</button>
+    <button class="button-warning">Small Warning</button>
+    <button class="button-warning button-filled">Small Warning</button>
     <button class="button button-warning">Small Warning</button>
     <button class="button button-warning button-filled">Small Warning</button>
     <button class="button button-warning button-rounded">Small Warning</button>
@@ -58,8 +58,8 @@
 
     <br>
     <!-- X-Small buttons -->
-    <button class="button button-red">X-Small</button>
-    <button class="button button-red button-filled">X-Small</button>
+    <button class="button-red">X-Small</button>
+    <button class="button-red button-filled">X-Small</button>
     <button class="button button-red">X-Small</button>
     <button class="button button-red button-filled">X-Small</button>
     <button class="button button-red button-rounded">X-Small</button>
