--- a/lw2/task1/index-dark.html
+++ b/lw2/task1/index-dark.html
@@ -3,13 +3,86 @@
 
 <head>
   <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Our programs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style-dark.css">
+  <link rel="stylesheet" href="style.css">
+  <title>dark</title>
 </head>
 
-<body>
+<body class="body-dark">
+
+  <div class="section-header">
+    <div class="header">
+      <h1 class="header-title header-title-white">Our<span
+          class="header-title-underline header-title-white">Programs</span></h1>
+    </div>
+    <div class="header-text header-text-white">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing
+      risus pulvinar non
+      sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus mattis nunc aliquam
+      pharetra feugiat ante sollicitudin.
+    </div>
+  </div>
+  <div class="content">
+    <div class="row">
+      <div class="row-item">
+        <div class="row-item-horizontal row-item-horizontal-dark">
+          <div class="row-item-img  row-item-img-dark"></div>
+          <div class="row-item-content">
+            <div class="row-item-content-text">
+              <span class="row-item-content-text-header row-item-header-white">Program Name</span>
+              <span class="row-item-content-text-description row-item-descriprion-white">Sagittis, eu pretium massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
+                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+              <a href="#" class="row-item-content-button">Small Button</a>
+            </div>
+          </div>
+        </div>
+        <div class="row-item-horizontal row-item-horizontal-dark">
+          <div class="row-item-img  row-item-img-dark"></div>
+          <div class="row-item-content">
+            <div class="row-item-content-text">
+              <span class="row-item-content-text-header row-item-header-white">Program Name</span>
+              <span class="row-item-content-text-description row-item-descriprion-white">Sagittis, eu pretium massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
+                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+              <a href="#" class="row-item-content-button">Small Button</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="row-item">
+        <div class="row-item-horizontal row-item-horizontal-dark">
+          <div class="row-item-img  row-item-img-dark"></div>
+          <div class="row-item-content">
+            <div class="row-item-content-text">
+              <span class="row-item-content-text-header row-item-header-white">Program Name</span>
+              <span class="row-item-content-text-description row-item-descriprion-white">Sagittis, eu pretium massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
+                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+              <a href="#" class="row-item-content-button">Small Button</a>
+            </div>
+          </div>
+        </div>
+        <div class="row-item-horizontal row-item-horizontal-dark">
+          <div class="row-item-img  row-item-img-dark"></div>
+          <div class="row-item-content">
+            <div class="row-item-content-text">
+              <span class="row-item-content-text-header row-item-header-white">Program Name</span>
+              <span class="row-item-content-text-description row-item-descriprion-white">Sagittis, eu pretium massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
+                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+              <a href="#" class="row-item-content-button">Small Button</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 
