Update index-light.html and index-dark.html

--- a/lw2/task1/index-light.html
+++ b/lw2/task1/index-light.html
@@ -9,74 +9,81 @@
 </head>
 
 <body>
-  <div class="section-header">
-    <div class="header">
-      <h1 class="header-title">Our<span class="header-title-underline">Programs</span></h1>
+  <div class="layout-container">
+    <div class="section-header">
+      <div class="header">
+        <h1 class="header-title">Our<span class="header-title-underline">Programs</span></h1>
+      </div>
+      <div class="header-text">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing risus pulvinar
+        non
+        sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus mattis nunc aliquam
+        pharetra feugiat ante sollicitudin.
+      </div>
     </div>
-    <div class="header-text">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing risus pulvinar non
-      sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus mattis nunc aliquam
-      pharetra feugiat ante sollicitudin.
-    </div>
-  </div>
-  <div class="content">
-    <div class="row">
-      <div class="row-item">
-        <div class="row-item-horizontal">
-          <div class="row-item-img"></div>
-          <div class="row-item-content">
-            <div class="row-item-content-text">
-              <span class="row-item-content-text-header">Program Name</span>
-              <span class="row-item-content-text-description">Sagittis, eu pretium massa quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
+    <div class="content">
+      <div class="row">
+        <div class="row-program-list ">
+          <img src="img/image1.png" class="row-program-img">
+          <div class="row-program-content">
+            <div class="row-program-content-text">
+              <span class="row-program-content-header">Program Name</span>
+              <span class="row-program-content-description">Sagittis, eu pretium
+                massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
+                enim
                 sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-item-content-button">Small Button</a>
+              <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
         </div>
-        <div class="row-item-horizontal">
-          <div class="row-item-img"></div>
-          <div class="row-item-content">
-            <div class="row-item-content-text">
-              <span class="row-item-content-text-header">Program Name</span>
-              <span class="row-item-content-text-description">Sagittis, eu pretium massa quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
+        <div class="row-program-list ">
+          <img src="img/image1.png" class="row-program-img">
+          <div class="row-program-content">
+            <div class="row-program-content-text">
+              <span class="row-program-content-header">Program Name</span>
+              <span class="row-program-content-description">Sagittis, eu pretium
+                massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
+                enim
                 sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-item-content-button">Small Button</a>
+              <a href="#" class="row-program-content-button">Small Button</a>
+            </div>
+          </div>
+        </div>
+        <div class="row-program-list ">
+          <img src="img/image1.png" class="row-program-img">
+          <div class="row-program-content">
+            <div class="row-program-content-text">
+              <span class="row-program-content-header">Program Name</span>
+              <span class="row-program-content-description">Sagittis, eu pretium
+                massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
+                enim
+                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+              <a href="#" class="row-program-content-button">Small Button</a>
+            </div>
+          </div>
+        </div>
+        <div class="row-program-list ">
+          <img src="img/image1.png" class="row-program-img">
+          <div class="row-program-content">
+            <div class="row-program-content-text">
+              <span class="row-program-content-header">Program Name</span>
+              <span class="row-program-content-description">Sagittis, eu pretium
+                massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
+                enim
+                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+              <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="row-item">
-        <div class="row-item-horizontal">
-          <div class="row-item-img"></div>
-          <div class="row-item-content">
-            <div class="row-item-content-text">
-              <span class="row-item-content-text-header">Program Name</span>
-              <span class="row-item-content-text-description">Sagittis, eu pretium massa quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-item-content-button">Small Button</a>
-            </div>
-          </div>
-        </div>
-        <div class="row-item-horizontal">
-          <div class="row-item-img"></div>
-          <div class="row-item-content">
-            <div class="row-item-content-text">
-              <span class="row-item-content-text-header">Program Name</span>
-              <span class="row-item-content-text-description">Sagittis, eu pretium massa quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-item-content-button">Small Button</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
 </body>
 
 </html>
