--- a/lw2/task1/index-dark.html
+++ b/lw2/task1/index-dark.html
@@ -9,81 +9,83 @@
 </head>
 
 <body class="body-dark">
-
-  <div class="section-header">
-    <div class="header">
-      <h1 class="header-title header-title-white">Our<span
-          class="header-title-underline header-title-white">Programs</span></h1>
+  <div class="layout-container layout-container-dark">
+    <div class="section-header">
+      <div class="header">
+        <h1 class="header-title header-title-white">Our<span
+            class="header-title-underline header-title-white">Programs</span></h1>
+      </div>
+      <div class="header-text header-text-white">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem
+        adipiscing
+        risus pulvinar non
+        sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus mattis nunc aliquam
+        pharetra feugiat ante sollicitudin.
+      </div>
     </div>
-    <div class="header-text header-text-white">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing
-      risus pulvinar non
-      sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus mattis nunc aliquam
-      pharetra feugiat ante sollicitudin.
-    </div>
-  </div>
-  <div class="content">
-    <div class="row">
-      <div class="row-item">
-        <div class="row-item-horizontal row-item-horizontal-dark">
-          <div class="row-item-img  row-item-img-dark"></div>
-          <div class="row-item-content">
-            <div class="row-item-content-text">
-              <span class="row-item-content-text-header row-item-header-white">Program Name</span>
-              <span class="row-item-content-text-description row-item-descriprion-white">Sagittis, eu pretium massa
+    <div class="content">
+      <div class="row">
+        <div class="row-program-list row-program-list-dark">
+          <img src="img/image2.png" class="row-program-img">
+          <div class="row-program-content">
+            <div class="row-program-content-text">
+              <span class="row-program-content-header row-program-content-header-white">Program Name</span>
+              <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
+                massa
                 quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
+                enim
                 sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-item-content-button">Small Button</a>
+              <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
         </div>
-        <div class="row-item-horizontal row-item-horizontal-dark">
-          <div class="row-item-img  row-item-img-dark"></div>
-          <div class="row-item-content">
-            <div class="row-item-content-text">
-              <span class="row-item-content-text-header row-item-header-white">Program Name</span>
-              <span class="row-item-content-text-description row-item-descriprion-white">Sagittis, eu pretium massa
+        <div class="row-program-list row-program-list-dark">
+          <img src="img/image2.png" class="row-program-img">
+          <div class="row-program-content">
+            <div class="row-program-content-text">
+              <span class="row-program-content-header row-program-content-header-white">Program Name</span>
+              <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
+                massa
                 quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
+                enim
                 sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-item-content-button">Small Button</a>
+              <a href="#" class="row-program-content-button">Small Button</a>
+            </div>
+          </div>
+        </div>
+        <div class="row-program-list row-program-list-dark">
+          <img src="img/image2.png" class="row-program-img">
+          <div class="row-program-content">
+            <div class="row-program-content-text">
+              <span class="row-program-content-header row-program-content-header-white">Program Name</span>
+              <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
+                massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
+                enim
+                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+              <a href="#" class="row-program-content-button">Small Button</a>
+            </div>
+          </div>
+        </div>
+        <div class="row-program-list row-program-list-dark">
+          <img src="img/image2.png" class="row-program-img">
+          <div class="row-program-content">
+            <div class="row-program-content-text">
+              <span class="row-program-content-header row-program-content-header-white">Program Name</span>
+              <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
+                massa
+                quisque cursus augue massa
+                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
+                enim
+                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+              <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="row-item">
-        <div class="row-item-horizontal row-item-horizontal-dark">
-          <div class="row-item-img  row-item-img-dark"></div>
-          <div class="row-item-content">
-            <div class="row-item-content-text">
-              <span class="row-item-content-text-header row-item-header-white">Program Name</span>
-              <span class="row-item-content-text-description row-item-descriprion-white">Sagittis, eu pretium massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-item-content-button">Small Button</a>
-            </div>
-          </div>
-        </div>
-        <div class="row-item-horizontal row-item-horizontal-dark">
-          <div class="row-item-img  row-item-img-dark"></div>
-          <div class="row-item-content">
-            <div class="row-item-content-text">
-              <span class="row-item-content-text-header row-item-header-white">Program Name</span>
-              <span class="row-item-content-text-description row-item-descriprion-white">Sagittis, eu pretium massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-item-content-button">Small Button</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
 </body>
 
 </html>
