--- a/lw2/task2/index.html
+++ b/lw2/task2/index.html
@@ -12,58 +12,60 @@
 <body>
 
   <div class="container-buttons">
-    <!-- XLarge Default buttons -->
-    <button class="button-large">XLarge Default</button>
-    <button class="button-large button-filled">XLarge Default</button>
-    <button class="button button-large">XLarge Default</button>
-    <button class="button button-large button-filled">XLarge Default</button>
-    <button class="button button-large button-rounded">XLarge Default</button>
-    <button class="button button-large button-filled button-rounded">XLarge Default</button>
-
-    <br>
-    <!-- Large Primary buttons -->
-    <button class="button-primary">Large Primary</button>
-    <button class="button-primary button-filled">Large Primary</button>
-    <button class="button button-primary">Large Primary</button>
-    <button class="button button-primary button-filled">Large Primary</button>
-    <button class="button button-primary button-rounded">Large Primary</button>
-    <button class="button button-primary button-filled button-rounded">Large Primary</button>
-
-    <br>
-    <!-- Large Success buttons -->
-    <button class="button-success">Large Success</button>
-    <button class="button-success button-filled">Large Success</button>
-    <button class="button button-success">Large Success</button>
-    <button class="button button-success button-filled">Large Success</button>
-    <button class="button button-success button-rounded">Large Success</button>
-    <button class="button button-success button-filled button-rounded">Large Success</button>
-
-    <br>
-    <!-- Medium Info buttons -->
-    <button class="button-medium">Medium Info</button>
-    <button class="button-medium button-filled">Medium Info</button>
-    <button class="button button-medium">Medium Info</button>
-    <button class="button button-medium button-filled">Medium Info</button>
-    <button class="button button-medium button-rounded">Medium Info</button>
-    <button class="button button-medium button-filled button-rounded">Medium Info</button>
-
-    <br>
-    <!-- Small Warning buttons -->
-    <button class="button-warning">Small Warning</button>
-    <button class="button-warning button-filled">Small Warning</button>
-    <button class="button button-warning">Small Warning</button>
-    <button class="button button-warning button-filled">Small Warning</button>
-    <button class="button button-warning button-rounded">Small Warning</button>
-    <button class="button button-warning button-filled button-rounded">Small Warning</button>
-
-    <br>
-    <!-- X-Small buttons -->
-    <button class="button-red">X-Small</button>
-    <button class="button-red button-filled">X-Small</button>
-    <button class="button button-red">X-Small</button>
-    <button class="button button-red button-filled">X-Small</button>
-    <button class="button button-red button-rounded">X-Small</button>
-    <button class="button button-red button-filled button-rounded">X-Small</button>
+    <div class="row">
+      <!-- XLarge Default buttons -->
+      <button class="button button-large">XLarge Default</button>
+      <button class="button button-large button-filled">XLarge Default</button>
+      <button class="button button-large">XLarge Default</button>
+      <button class="button button-large button-filled">XLarge Default</button>
+      <button class="button button-large button-rounded">XLarge Default</button>
+      <button class="button button-large button-filled button-rounded">XLarge Default</button>
+    </div>
+    <div class="row">
+      <!-- Large Primary buttons -->
+      <button class="button button-primary">Large Primary</button>
+      <button class="button button-primary button-filled">Large Primary</button>
+      <button class="button button-primary">Large Primary</button>
+      <button class="button button-primary button-filled">Large Primary</button>
+      <button class="button button-primary button-rounded">Large Primary</button>
+      <button class="button button-primary button-filled button-rounded">Large Primary</button>
+    </div>
+    <div class="row">
+      <!-- Large Success buttons -->
+      <button class="button button-success">Large Success</button>
+      <button class="button button-success button-filled">Large Success</button>
+      <button class="button button-success">Large Success</button>
+      <button class="button button-success button-filled">Large Success</button>
+      <button class="button button-success button-rounded">Large Success</button>
+      <button class="button button-success button-filled button-rounded">Large Success</button>
+    </div>
+    <div class="row">
+      <!-- Medium Info buttons -->
+      <button class="button button-medium">Medium Info</button>
+      <button class="button button-medium button-filled">Medium Info</button>
+      <button class="button button-medium">Medium Info</button>
+      <button class="button button-medium button-filled">Medium Info</button>
+      <button class="button button-medium button-rounded">Medium Info</button>
+      <button class="button button-medium button-filled button-rounded">Medium Info</button>
+    </div>
+    <div class="row">
+      <!-- Small Warning buttons -->
+      <button class="button button-warning">Small Warning</button>
+      <button class="button button-warning button-filled">Small Warning</button>
+      <button class="button button-warning">Small Warning</button>
+      <button class="button button-warning button-filled">Small Warning</button>
+      <button class="button button-warning button-rounded">Small Warning</button>
+      <button class="button button-warning button-filled button-rounded">Small Warning</button>
+    </div>
+    <div class="row">
+      <!-- X-Small buttons -->
+      <button class="button button-red">X-Small</button>
+      <button class="button button-red button-filled">X-Small</button>
+      <button class="button button-red">X-Small</button>
+      <button class="button button-red button-filled">X-Small</button>
+      <button class="button button-red button-rounded">X-Small</button>
+      <button class="button button-red button-filled button-rounded">X-Small</button>
+    </div>
   </div>
 
 </body>
