--- a/lw2/task1/index-dark.html
+++ b/lw2/task1/index-dark.html
@@ -16,10 +16,8 @@
             class="header-title-underline header-title-white">Programs</span></h1>
       </div>
       <div class="header-text header-text-white">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem
-        adipiscing
-        risus pulvinar non
-        sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus mattis nunc aliquam
-        pharetra feugiat ante sollicitudin.
+        adipiscing risus pulvinar non sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim
+        cursus mattis nunc aliquam pharetra feugiat ante sollicitudin.
       </div>
     </div>
     <div class="content">
@@ -30,11 +28,8 @@
             <div class="row-program-content-text">
               <span class="row-program-content-header row-program-content-header-white">Program Name</span>
               <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
-                massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
-                enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+                massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
+                Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
               <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
@@ -45,11 +40,8 @@
             <div class="row-program-content-text">
               <span class="row-program-content-header row-program-content-header-white">Program Name</span>
               <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
-                massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
-                enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+                massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
+                Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
               <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
@@ -60,11 +52,8 @@
             <div class="row-program-content-text">
               <span class="row-program-content-header row-program-content-header-white">Program Name</span>
               <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
-                massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
-                enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+                massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
+                Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
               <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
@@ -75,11 +64,8 @@
             <div class="row-program-content-text">
               <span class="row-program-content-header row-program-content-header-white">Program Name</span>
               <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
-                massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
-                enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+                massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
+                Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
               <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
