--- a/lw2/task1/index-light.html
+++ b/lw2/task1/index-light.html
@@ -15,9 +15,8 @@
         <h1 class="header-title">Our<span class="header-title-underline">Programs</span></h1>
       </div>
       <div class="header-text">Tortor sit nisl purus nunc massa diam velit hac in. Nisl, sem adipiscing risus pulvinar
-        non
-        sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus mattis nunc aliquam
-        pharetra feugiat ante sollicitudin.
+        non sed nullam id integer. Integer quis porttitor mauris arcu, pretium orci quam. Enim cursus mattis nunc
+        aliquam pharetra feugiat ante sollicitudin.
       </div>
     </div>
     <div class="content">
@@ -28,11 +27,8 @@
             <div class="row-program-content-text">
               <span class="row-program-content-header">Program Name</span>
               <span class="row-program-content-description">Sagittis, eu pretium
-                massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
-                enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+                massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
+                Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
               <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
@@ -43,11 +39,8 @@
             <div class="row-program-content-text">
               <span class="row-program-content-header">Program Name</span>
               <span class="row-program-content-description">Sagittis, eu pretium
-                massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
-                enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+                massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
+                Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
               <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
@@ -58,11 +51,8 @@
             <div class="row-program-content-text">
               <span class="row-program-content-header">Program Name</span>
               <span class="row-program-content-description">Sagittis, eu pretium
-                massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
-                enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+                massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
+                Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
               <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
@@ -73,11 +63,8 @@
             <div class="row-program-content-text">
               <span class="row-program-content-header">Program Name</span>
               <span class="row-program-content-description">Sagittis, eu pretium
-                massa
-                quisque cursus augue massa
-                cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id. Elit interdum vel nisi, in
-                enim
-                sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
+                massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
+                Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
               <a href="#" class="row-program-content-button">Small Button</a>
             </div>
           </div>
