Update classes in index-dark and index-lihgt

--- a/lw2/task1/index-dark.html
+++ b/lw2/task1/index-dark.html
@@ -22,51 +22,51 @@
     </div>
     <div class="content">
       <div class="row">
-        <div class="row-program-list row-program-list-dark">
-          <img src="img/image2.png" class="row-program-img">
-          <div class="row-program-content">
-            <div class="row-program-content-text">
-              <span class="row-program-content-header row-program-content-header-white">Program Name</span>
-              <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
+        <div class="program-list program-list-dark">
+          <img src="img/image2.png" class="program-list-img">
+          <div class="program-list-content">
+            <div class="program-list-content-text">
+              <span class="program-list-content-header program-list-content-header-white">Program Name</span>
+              <span class="program-list-content-description program-list-content-descriprion-white">Sagittis, eu pretium
                 massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
                 Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-program-content-button">Small Button</a>
+              <a href="#" class="program-list-content-button">Small Button</a>
             </div>
           </div>
         </div>
-        <div class="row-program-list row-program-list-dark">
-          <img src="img/image2.png" class="row-program-img">
-          <div class="row-program-content">
-            <div class="row-program-content-text">
-              <span class="row-program-content-header row-program-content-header-white">Program Name</span>
-              <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
+        <div class="program-list program-list-dark">
+          <img src="img/image2.png" class="program-list-img">
+          <div class="program-list-content">
+            <div class="program-list-content-text">
+              <span class="program-list-content-header program-list-content-header-white">Program Name</span>
+              <span class="program-list-content-description program-list-content-descriprion-white">Sagittis, eu pretium
                 massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
                 Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-program-content-button">Small Button</a>
+              <a href="#" class="program-list-content-button">Small Button</a>
             </div>
           </div>
         </div>
-        <div class="row-program-list row-program-list-dark">
-          <img src="img/image2.png" class="row-program-img">
-          <div class="row-program-content">
-            <div class="row-program-content-text">
-              <span class="row-program-content-header row-program-content-header-white">Program Name</span>
-              <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
+        <div class="program-list program-list-dark">
+          <img src="img/image2.png" class="program-list-img">
+          <div class="program-list-content">
+            <div class="program-list-content-text">
+              <span class="program-list-content-header program-list-content-header-white">Program Name</span>
+              <span class="program-list-content-description program-list-content-descriprion-white">Sagittis, eu pretium
                 massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
                 Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-program-content-button">Small Button</a>
+              <a href="#" class="program-list-content-button">Small Button</a>
             </div>
           </div>
         </div>
-        <div class="row-program-list row-program-list-dark">
-          <img src="img/image2.png" class="row-program-img">
-          <div class="row-program-content">
-            <div class="row-program-content-text">
-              <span class="row-program-content-header row-program-content-header-white">Program Name</span>
-              <span class="row-program-content-description row-program-content-descriprion-white">Sagittis, eu pretium
+        <div class="program-list program-list-dark">
+          <img src="img/image2.png" class="program-list-img">
+          <div class="program-list-content">
+            <div class="program-list-content-text">
+              <span class="program-list-content-header program-list-content-header-white">Program Name</span>
+              <span class="program-list-content-description program-list-content-descriprion-white">Sagittis, eu pretium
                 massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
                 Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-program-content-button">Small Button</a>
+              <a href="#" class="program-list-content-button">Small Button</a>
             </div>
           </div>
         </div>
