--- a/lw2/task1/index-light.html
+++ b/lw2/task1/index-light.html
@@ -21,54 +21,55 @@
     </div>
     <div class="content">
       <div class="row">
-        <div class="row-program-list">
-          <img src="img/image1.png" class="row-program-img">
-          <div class="row-program-content">
-            <div class="row-program-content-text">
-              <span class="row-program-content-header">Program Name</span>
-              <span class="row-program-content-description">Sagittis, eu pretium
+        <div class="program-list">
+          <img src="img/image1.png" class="program-list-img">
+          <div class="program-list-content">
+            <div class="program-list-content-text">
+              <span class="program-list-content-header">Program Name</span>
+              <span class="program-list-content-description">Sagittis, eu pretium
                 massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
                 Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-program-content-button">Small Button</a>
+              <a href="#" class="program-list-content-button">Small Button</a>
             </div>
           </div>
         </div>
-        <div class="row-program-list">
-          <img src="img/image1.png" class="row-program-img">
-          <div class="row-program-content">
-            <div class="row-program-content-text">
-              <span class="row-program-content-header">Program Name</span>
-              <span class="row-program-content-description">Sagittis, eu pretium
+        <div class="program-list">
+          <img src="img/image1.png" class="program-list-img">
+          <div class="program-list-content">
+            <div class="program-list-content-text">
+              <span class="program-list-content-header">Program Name</span>
+              <span class="program-list-content-description">Sagittis, eu pretium
                 massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
                 Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-program-content-button">Small Button</a>
+              <a href="#" class="program-list-content-button">Small Button</a>
             </div>
           </div>
         </div>
-        <div class="row-program-list">
-          <img src="img/image1.png" class="row-program-img">
-          <div class="row-program-content">
-            <div class="row-program-content-text">
-              <span class="row-program-content-header">Program Name</span>
-              <span class="row-program-content-description">Sagittis, eu pretium
+        <div class="program-list">
+          <img src="img/image1.png" class="program-list-img">
+          <div class="program-list-content">
+            <div class="program-list-content-text">
+              <span class="program-list-content-header">Program Name</span>
+              <span class="program-list-content-description">Sagittis, eu pretium
                 massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
                 Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-program-content-button">Small Button</a>
+              <a href="#" class="program-list-content-button">Small Button</a>
             </div>
           </div>
         </div>
-        <div class="row-program-list">
-          <img src="img/image1.png" class="row-program-img">
-          <div class="row-program-content">
-            <div class="row-program-content-text">
-              <span class="row-program-content-header">Program Name</span>
-              <span class="row-program-content-description">Sagittis, eu pretium
+        <div class="program-list">
+          <img src="img/image1.png" class="program-list-img">
+          <div class="program-list-content">
+            <div class="program-list-content-text">
+              <span class="program-list-content-header">Program Name</span>
+              <span class="program-list-content-description">Sagittis, eu pretium
                 massa quisque cursus augue massa cursus. Sed quisque velit, auctor at lobortis hac tincidunt sodales id.
                 Elit interdum vel nisi, in enim sagittis at. Netus sagittis eleifend aliquet urna quis.</span>
-              <a href="#" class="row-program-content-button">Small Button</a>
+              <a href="#" class="program-list-content-button">Small Button</a>
             </div>
           </div>
         </div>
+
       </div>
     </div>
 </body>
