--- a/lw6/Todo-app/index.html
+++ b/lw6/Todo-app/index.html
@@ -1,25 +1,21 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>TODO app</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/todo-app.css" />
-  </head>
 
-  <body>
-    <div class="todo-app">
-      <div class="todo-form">
-        <input
-          type="text"
-          name="todo-text"
-          class="todo-form__input"
-          placeholder="Новая задача"
-        />
-        <button class="todo-form__button" type="button">add</button>
-      </div>
+<head>
+  <title>TODO app</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="todo-app.min.css" />
+</head>
 
-      <div class="todo-list">
-        <!-- 
+<body>
+  <div class="todo-app">
+    <div class="todo-form">
+      <input type="text" name="todo-text" class="todo-form__input" placeholder="Новая задача" />
+      <button class="todo-form__button" type="button">add</button>
+    </div>
+
+    <div class="todo-list">
+      <!-- 
 				Будет состоять из таких элементов:
 				<div class="todo-list-item">
           <label>
@@ -28,13 +24,14 @@
           </label>
 				</div>
 			  -->
-      </div>
-
-      <div class="todo-list-stat">
-        Выполнено задач: <span class="todo-list-stat__completed">0</span>
-      </div>
     </div>
 
-    <script src="src/todo-app.js"></script>
-  </body>
+    <div class="todo-list-stat">
+      Выполнено задач: <span class="todo-list-stat__completed">0</span>
+    </div>
+  </div>
+
+  <script src="todo-app.min.js"></script>
+</body>
+
 </html>
