--- a/lw6/Todo-app/index.html
+++ b/lw6/Todo-app/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>TODO app</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="todo-app.min.css" />
+  <link rel="stylesheet" href="src/todo-app.css" />
 </head>
 
 <body>
@@ -31,7 +31,7 @@
     </div>
   </div>
 
-  <script src="todo-app.min.js"></script>
+  <script src="src/todo-app.js"></script>
 </body>
 
 </html>
