--- a/lw5/task2/index.html
+++ b/lw5/task2/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="listing-store.min.css" rel="stylesheet">
+  <link href="listing-store.css" rel="stylesheet">
   <title>Document</title>
 </head>
 
@@ -36,6 +37,7 @@
     Add new element
   </button>
   <script src="listing-store.min.js"></script>
+  <script src="listing-store.js"></script>
 </body>
 
 </html>
